--- a/courses.html
+++ b/courses.html
@@ -82,7 +82,7 @@
                               <div class="logo-cat-wrap">
                                   <div class="logo-part">
                                       <a href="index.html">
-                                          <img src="assets/images/logo.png" alt="" style="max-width: 200px;max-height: 100px;">
+                                          <img src="assets/images/logo.png" alt="" style="max-width: 20rem;width: 20rem;height: 20rem;max-height: 4rem;">
                                       </a>
                                   </div>
                               </div>
@@ -177,7 +177,10 @@
                                 </div>
                                 <div class="content-part">
                                     <h4 class="title"><a href="#">Grade: 1 to 10</a></h4>
-                                    <p class="desc">Tamil, English, Hindi, Maths, Science, Social science, Civics, History, Geography</p>
+                                    <p class="desc" style="word-spacing: 2rem;">
+                                        Tamil, English, Hindi, 
+                                        Maths, Science, Social science, 
+                                        Civics, History, Geography</p>
                                 </div>
                             </div>
                         </div>
@@ -189,7 +192,13 @@
                                 </div>
                                 <div class="content-part">
                                     <h4 class="title"><a href="#">Grade: 11 & 12</a></h4>
-                                    <p class="desc">Tamil, English, Hindi, Maths, Physics, Chemistry, Biology, Accountancy, Economics, Commerce, Business Maths, Business studies, Computer science, Informatics practices</p>
+                                    <p class="desc" style="word-spacing: 2rem;">
+                                        Tamil, English, Hindi,
+                                        Maths, Physics, Chemistry, 
+                                        Biology, Accountancy, Economics, 
+                                        Commerce, Business Maths, 
+                                        Business studies, Computer science, 
+                                        Informatics practices</p>
                                 
                                 </div>
                             </div>
@@ -202,7 +211,7 @@
                                 </div>
                                 <div class="content-part">
                                     <h4 class="title"><a href="#">Computer courses</a></h4>
-                                    <p class="desc">Python,	C, C++,	Java, Java script, Spring frame work</p>
+                                    <p class="desc" style="word-spacing: 2rem;">Python,	C, C++,	Java, Java script, Spring frame work</p>
                                 </div>
                             </div>
                         </div>
@@ -214,7 +223,7 @@
                                 </div>
                                 <div class="content-part">
                                     <h4 class="title"><a href="#">College & Diploma Tuition</a></h4>
-                                    <p class="desc">All Maths subjects</p>
+                                    <p class="desc" style="word-spacing: .2rem;">All Maths subjects</p>
                                 </div>
                             </div>
                         </div>
@@ -226,9 +235,9 @@
                                 </div>
                                 <div class="content-part">
                                     <h4 class="title"><a href="#">TNPSC EXAMS</a></h4>
-                                    <p class="desc">Group I, Group II, Group III, Group IV</p>
+                                    <p class="desc" style="word-spacing: 2rem;">Group I, Group II, Group III, Group IV</p>
                                     <h4 class="title"><a href="#">SSC EXAMS</a></h4>
-                                    <p class="desc">SSC CGL, SSC CHSL, SSC GD, SSC JE, SSC CPO	
+                                    <p class="desc" style="word-spacing: 2rem;">SSC CGL, SSC CHSL, SSC GD, SSC JE, SSC CPO	
                                         </p>
                                 </div>
                             </div>
@@ -237,10 +246,209 @@
                 </div>
             </div>
 
-
+<!-- Popular Courses Section Start -->
+<div id="rs-popular-courses" class="rs-popular-courses style6 gray-bg4 pt-100 pb-100 md-pt-70 md-pb-70">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-3 mb-50">
+                <div class="sec-title6">
+                   <span class="sub-title pb-10">Language courses</span>
+                   <h2 class="title title2"></h2>
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="gridFilter style2 modify1 mb-10">
+                    <button class="active" data-filter="*">All</button>
+                    <button data-filter=".filter1">Career development programs</button>
+                    <button data-filter=".filter2">Personality development programs</button>
+                    <button data-filter=".filter3">Hindi</button>
+                    <button data-filter=".filter4">Tamil</button>
+                </div>
+            </div>
+        </div>
+        <div class="row grid">
+            <div class="col-lg-3 col-md-6 grid-item filter1">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Spoken English</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter1">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">IELTS</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter1">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">TOEFL</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter1">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">PRE</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter1">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">YLE</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Communication skills</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Basic English for speaking</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Leadership skills</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Overcoming fears</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Public speaking</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Letter writing</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Proper pronunciation</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Total personality development</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Resume writing</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Group discussions</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter2">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">General awareness of rules and regulations</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter3">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Prathmic</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter3">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Madhyama</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter3">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Rashtrabasha</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter3">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Praveshika</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter3">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Visharad Poorvardh</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter3">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Visharad Uttharardth</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter3">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Praveen Poorvardh</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter3">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Praveen Uttharardth</a></h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 grid-item filter4">
+                <div class="courses-item mb-30">
+                    <div class="content-part">
+                        <h3 class="title"><a href="javascript:void(0);">Practices for Reading and Writing</a></h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Popular Courses Section End -->
 
             <!-- Counter Section Start -->
-            <div id="rs-about" class="rs-about style3 pt-100 md-pt-70">
+            <div id="rs-about" class="rs-about style3 pt-100 md-pt-70 d-none">
                 <div class="container">
                     <div class="row y-middle">
                         <div class="col-lg-6 lg-pr-0 md-mb-30">
@@ -301,9 +509,14 @@
                                                                 <div class="inner-box">
                                                                     <h3>Hindi</h3>
                                                                     <ul class="review-list">
-                                                                        <li>Prathmic Madhyama</li>	<li>Rashtrabasha Praveshika</li>
-                                                                        <li>Visharad poorvardh</li>		<li>Visharad Uttharardth</li>
-                                                                        <li>Praveen Poorvardh</li>		<li>Praveen Uttharardth</li>
+                                                                        <li>Prathmic</li>
+                                                                        <li>Madhyama</li>
+                                                                        <li>Rashtrabasha</li> 
+                                                                        <li>Praveshika</li>
+                                                                        <li>Visharad Poorvardh</li>		
+                                                                        <li>Visharad Uttharardth</li>
+                                                                        <li>Praveen Poorvardh</li>
+                                                                        <li>Praveen Uttharardth</li>
 
                                                                     </ul>
                                                                 </div>
@@ -347,7 +560,7 @@
 
 
             <!-- Section bg Wrap 2 start -->
-            <div class="pt-5">
+            <div class="pt-5 gray-bg4">
                 <br>
                 <br>
                 <br>
@@ -428,14 +641,29 @@
         <script src="assets/js/rsmenu-main.js"></script> 
         <!-- op nav js -->
         <script src="assets/js/jquery.nav.js"></script>
+        <!-- owl.carousel js -->
+        <script src="assets/js/owl.carousel.min.js"></script>
+        <!-- Slick js -->
+        <script src="assets/js/slick.min.js"></script>
+        <!-- isotope.pkgd.min js -->
+        <script src="assets/js/isotope.pkgd.min.js"></script>
+        <!-- imagesloaded.pkgd.min js -->
+        <script src="assets/js/imagesloaded.pkgd.min.js"></script>
         <!-- wow js -->
-        <script src="assets/js/wow.min.js"></script>     
+        <script src="assets/js/wow.min.js"></script>
+        <!-- Skill bar js -->
+        <script src="assets/js/skill.bars.jquery.js"></script>
+        <script src="assets/js/jquery.counterup.min.js"></script>        
+         <!-- counter top js -->
+        <script src="assets/js/waypoints.min.js"></script>
+        <!-- video js -->
+        <script src="assets/js/jquery.mb.YTPlayer.min.js"></script>
+        <!-- magnific popup js -->
+        <script src="assets/js/jquery.magnific-popup.min.js"></script>
+        <!-- tilt js -->
+        <script src="assets/js/tilt.jquery.min.js"></script>      
         <!-- plugins js -->
         <script src="assets/js/plugins.js"></script>
-        <!-- magnific popup js -->
-        <script src="assets/js/jquery.magnific-popup.min.js"></script>  
-        <!-- tilt js -->
-        <script src="assets/js/tilt.jquery.min.js"></script>   
         <!-- contact form js -->
         <script src="assets/js/contact.form.js"></script>
         <!-- main js -->
