--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                               <div class="logo-cat-wrap">
                                   <div class="logo-part">
                                       <a href="index.html">
-                                          <img src="assets/images/logo.png" alt="" style="max-width: 200px;max-height: 100px;">
+                                          <img src="assets/images/logo.png" alt="" style="max-width: 20rem;width: 20rem;height: 20rem;max-height: 4rem;">
                                       </a>
                                   </div>
                               </div>
@@ -150,7 +150,7 @@
                          <div class="banner-content">
                              <h1 class="banner-title white-color">CBSE board / State board / ICSE / IGCSE</h1>
                              <div class="desc white-color mb-50">
-                                Extensive  coaching for all subjects. Expert Teachers. Assured Results. Batch Coaching, Private Tuitions, Home Tuitions. Spacious Class Rooms. Multiple Revisions
+                                Extensive  coaching for all subjects. Expert Teachers. Assured Results. Batch Coaching, Private Tuitions, Home Tuitions. Spacious Class Rooms.
                              </div>
                          </div>
                          <div class="icons one up-down">
