--- a/reviews.html
+++ b/reviews.html
@@ -88,7 +88,7 @@
                               <div class="logo-cat-wrap">
                                   <div class="logo-part">
                                       <a href="index.html">
-                                          <img src="assets/images/logo.png" alt="" style="max-width: 200px;max-height: 100px;">
+                                          <img src="assets/images/logo.png" alt="" style="max-width: 20rem;width: 20rem;height: 20rem;max-height: 4rem;">
                                       </a>
                                   </div>
                               </div>
@@ -169,8 +169,8 @@
             <div class="rs-testimonial style5 gray-bg pt-110 pb-120 md-pt-70 md-pb-80">
                 <div class="container">
                     <div class="sec-title mb-15 text-center">
-                        <h2 class="title extra-bold mb-15 sm-mb-10">What Our Client Says</h2>
-                        <div class="sub-title capitalize">Our Clients Review</div>
+                        <h2 class="title extra-bold mb-15 sm-mb-10">What Our Student/Parent Says</h2>
+                        <div class="sub-title capitalize">Our Review</div>
                     </div>
                     <div class="rs-carousel owl-carousel" 
                         data-loop="true" 
