--- a/syllabus.html
+++ b/syllabus.html
@@ -82,7 +82,7 @@
                               <div class="logo-cat-wrap">
                                   <div class="logo-part">
                                       <a href="index.html">
-                                          <img src="assets/images/logo.png" alt="" style="max-width: 200px;max-height: 100px;">
+                                          <img src="assets/images/logo.png" alt="" style="max-width: 20rem;width: 20rem;height: 20rem;max-height: 4rem;">
                                       </a>
                                   </div>
                               </div>
@@ -169,7 +169,7 @@
                                 </div>
                                 <div class="content-part">
                                    <div class="icon-part mb-30 md-mb-15">
-                                      <img src="assets/images/services/icon/1.png" alt="images"> 
+                                      <img src="assets/images/cbse.jpeg" alt="images"> 
                                    </div>
                                     <h4 class="title"><a href="#">CBSE</a></h4>
                                         <p class="desc"></p>
@@ -183,7 +183,7 @@
                                 </div>
                                 <div class="content-part">
                                    <div class="icon-part mb-30 md-mb-15">
-                                      <img src="assets/images/services/icon/2.png" alt="images"> 
+                                      <img src="assets/images/tn.png" alt="images"> 
                                    </div>
                                     <h4 class="title"><a href="#">STATE BOARD</a></h4>
                                         <p class="desc"></p>
@@ -197,7 +197,7 @@
                                 </div>
                                 <div class="content-part">
                                    <div class="icon-part mb-30 md-mb-15">
-                                      <img src="assets/images/services/icon/3.png" alt="images"> 
+                                      <img src="assets/images/icse.png" alt="images"> 
                                    </div>
                                     <h4 class="title"><a href="#">ICSE</a></h4>
                                         <p class="desc"></p>
@@ -211,7 +211,7 @@
                                 </div>
                                 <div class="content-part">
                                    <div class="icon-part mb-30 md-mb-15">
-                                      <img src="assets/images/services/icon/4.png" alt="images"> 
+                                      <img src="assets/images/igcse.jpeg" alt="images"> 
                                    </div>
                                     <h4 class="title"><a href="#">IGCSE</a></h4>
                                         <p class="desc"></p>
