--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
                               <div class="logo-cat-wrap">
                                   <div class="logo-part">
                                       <a href="index.html">
-                                          <img src="assets/images/logo.png" alt="" style="max-width: 200px;max-height: 100px;">
+                                          <img src="assets/images/logo.png" alt="" style="max-width: 20rem;width: 20rem;height: 20rem;max-height: 4rem;">
                                       </a>
                                   </div>
                               </div>
