--- a/reviews.html
+++ b/reviews.html
@@ -60,7 +60,7 @@
             <!--Header Start-->
             <header id="rs-header" class="rs-header">
                 <!-- Topbar Area Start -->
-                <div class="topbar-area dark-parimary-bg">
+                <div class="topbar-area dark-parimary-bg d-block">
                     <div class="container">
                         <div class="row y-middle">
                             <div class="col-md-7">
@@ -69,7 +69,7 @@
                                         <i class="flaticon-phone"></i>
                                         <a href="tel:918667836797">+91 94 43 00 94 34, +91 86 67 83 67 97</a>
                                     </li>
-                                    <li>
+                                    <li class="d-none d-lg-inline">
                                         <i class="flaticon-email"></i>
                                         <a href="mailto:support@myguruacademy.net">support@myguruacademy.net</a>
                                     </li>
