--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <!--Header Start-->
             <header id="rs-header" class="rs-header">
                 <!-- Topbar Area Start -->
-                <div class="topbar-area dark-parimary-bg">
+                <div class="topbar-area dark-parimary-bg d-block">
                     <div class="container">
                         <div class="row y-middle">
                             <div class="col-md-7">
@@ -63,7 +63,7 @@
                                         <i class="flaticon-phone"></i>
                                         <a href="tel:918667836797">+91 94 43 00 94 34, +91 86 67 83 67 97</a>
                                     </li>
-                                    <li>
+                                    <li class="d-none d-lg-inline">
                                         <i class="flaticon-email"></i>
                                         <a href="mailto:support@myguruacademy.net">support@myguruacademy.net</a>
                                     </li>
@@ -199,7 +199,7 @@
                         <div class="col-lg-8">
                             <!-- Map Section Start --> 
                             <div class="contact-map">
-                                <iframe scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=T83,%202nd%20Floor,%20Sri%20Vignesh%20building%20Near%20Bus%20Terminus%20Kovaipudur,%20Coimbatore%20%E2%80%93%20641042%20+(My%20Guru%20Academy)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" width="100%" height="600" frameborder="0"><a href="https://www.maps.ie/distance-area-calculator.html">distance maps</a></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15668.888070528517!2d76.932241!3d10.9465948!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba85b33969cfc55%3A0x82f99f0d76eeed1!2sMy%20Guru%20Academy!5e0!3m2!1sen!2sin!4v1685543541262!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 
                             </div>
                             <!-- Map Section End -->
