--- a/courses.html
+++ b/courses.html
@@ -178,9 +178,9 @@
                                 <div class="content-part">
                                     <h4 class="title"><a href="#">Grade: 1 to 10</a></h4>
                                     <p class="desc" style="word-spacing: 2rem;">
-                                        Tamil, English, Hindi, 
-                                        Maths, Science, Social science, 
-                                        Civics, History, Geography</p>
+                                        Tamil English Hindi
+                                        Maths Science <span style="word-spacing: 0rem;">Social Science</span>
+                                        Civics History Geography</p>
                                 </div>
                             </div>
                         </div>
@@ -193,13 +193,37 @@
                                 <div class="content-part">
                                     <h4 class="title"><a href="#">Grade: 11 & 12</a></h4>
                                     <p class="desc" style="word-spacing: 2rem;">
-                                        Tamil, English, Hindi,
-                                        Maths, Physics, Chemistry, 
-                                        Biology, Accountancy, Economics, 
-                                        Commerce, Business Maths, 
-                                        Business studies, Computer science, 
+                                        Tamil English Hindi
+                                        Maths Physics Chemistry
+                                        Biology Accountancy Economics
+                                        Commerce Business Maths
+                                        <span style="word-spacing: 0rem;">Business Studies</span> 
+                                        <span style="word-spacing: 0rem;">Computer Science</span>
                                         Informatics practices</p>
                                 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mb-30">
+                            <div class="degree-wrap">
+                                <img src="assets/images/degrees/7.jpg" alt="">
+                                <div class="title-part">
+                                    <h4 class="title">Hindi</h4>
+                                </div>
+                                <div class="content-part">
+                                    <h4 class="title"><a href="#">Hindi</a></h4>
+                                    <p class="desc" style="word-spacing: 2rem;">
+                                        Prathmic
+                                        Madhyama
+                                        Rashtrabasha
+                                        Praveshika
+                                        <span style="word-spacing: 0rem;">Visharad Poorvardh</span> 
+                                        <span style="word-spacing: 0rem;">Visharad Uttharardth</span> 
+                                        <span style="word-spacing: 0rem;">Praveen Poorvardh</span> 
+                                        <span style="word-spacing: 0rem;">Praveen Uttharardth</span> 
+
+
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +235,51 @@
                                 </div>
                                 <div class="content-part">
                                     <h4 class="title"><a href="#">Computer courses</a></h4>
-                                    <p class="desc" style="word-spacing: 2rem;">Python,	C, C++,	Java, Java script, Spring frame work</p>
+                                    <p class="desc" style="word-spacing: 2rem;">Python	C C++	Java <span style="word-spacing: 0rem;">Java script</span> <span style="word-spacing: 0rem;">Spring frame work</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mb-30">
+                            <div class="degree-wrap">
+                                <img src="assets/images/degrees/3.jpg" alt="">
+                                <div class="title-part">
+                                    <h4 class="title">Competitive Exam Coaching</h4>
+                                </div>
+                                <div class="content-part">
+                                    <h4 class="title"><a href="#">TNPSC EXAMS</a></h4>
+                                    <p class="desc" style="word-spacing: 2rem;"><span style="word-spacing: 0rem;">Group I</span> <span style="word-spacing: 0rem;">Group II</span> <span style="word-spacing: 0rem;">Group III</span> <span style="word-spacing: 0rem;">Group IV</span></p>
+                                    <h4 class="title"><a href="#">SSC EXAMS</a></h4>
+                                    <p class="desc" style="word-spacing: 2rem;"><span style="word-spacing: 0rem;">SSC CGL</span> <span style="word-spacing: 0rem;">SSC CHSL</span> <span style="word-spacing: 0rem;">SSC GD</span> <span style="word-spacing: 0rem;">SSC JE</span> <span style="word-spacing: 0rem;">SSC CPO</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mb-30">
+                            <div class="degree-wrap">
+                                <img src="assets/images/degrees/9.jpg" alt="">
+                                <div class="title-part">
+                                    <h4 class="title">Career development programs</h4>
+                                </div>
+                                <div class="content-part">
+                                    <h4 class="title"><a href="#">Career development programs</a></h4>
+                                    <p class="desc" style="word-spacing: 2rem;">
+                                        <span style="word-spacing: 0rem;">Spoken English</span> 
+                                        IELTS
+                                        TOEFL
+                                        PRE
+                                        YLE
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mb-30">
+                            <div class="degree-wrap">
+                                <img src="assets/images/degrees/8.jpg" alt="">
+                                <div class="title-part">
+                                    <h4 class="title">Tamil</h4>
+                                </div>
+                                <div class="content-part">
+                                    <h4 class="title"><a href="#">Tamil</a></h4>
+                                    <p class="desc" style="word-spacing: .2rem;">Practices for Reading and Writing</p>
                                 </div>
                             </div>
                         </div>
@@ -227,27 +295,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 mb-30">
-                            <div class="degree-wrap">
-                                <img src="assets/images/degrees/3.jpg" alt="">
-                                <div class="title-part">
-                                    <h4 class="title">Competitive Exam Coaching</h4>
-                                </div>
-                                <div class="content-part">
-                                    <h4 class="title"><a href="#">TNPSC EXAMS</a></h4>
-                                    <p class="desc" style="word-spacing: 2rem;">Group I, Group II, Group III, Group IV</p>
-                                    <h4 class="title"><a href="#">SSC EXAMS</a></h4>
-                                    <p class="desc" style="word-spacing: 2rem;">SSC CGL, SSC CHSL, SSC GD, SSC JE, SSC CPO	
-                                        </p>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
 
 <!-- Popular Courses Section Start -->
-<div id="rs-popular-courses" class="rs-popular-courses style6 gray-bg4 pt-100 pb-100 md-pt-70 md-pb-70">
+<div id="rs-popular-courses" class="d-none rs-popular-courses style6 gray-bg4 pt-100 pb-100 md-pt-70 md-pb-70">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-3 mb-50">
@@ -447,6 +500,38 @@
 </div>
 <!-- Popular Courses Section End -->
 
+
+            <!-- CTA Section Start -->
+            <div class="rs-cta section-wrap gray-bg4">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="img-part">
+                              <img src="assets/images/degrees/10.jpg" alt="">
+                        </div>
+                    </div>  
+                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="300ms" data-wow-duration="2000ms">
+                        <div class="content">
+                            <div class="sec-title mb-40 ">
+                                <h2 class="title">Personality development programs</h2>
+                                <div class="desc">
+                                    <i class="fa fa-check text-info"></i> Communication skills
+                                    <br><i class="fa fa-check text-info"></i> Basic English for speaking 
+                                    <br><i class="fa fa-check text-info"></i> Leadership skills
+                                    <br><i class="fa fa-check text-info"></i> Overcoming fears
+                                    <br><i class="fa fa-check text-info"></i> Public speaking 
+                                    <br><i class="fa fa-check text-info"></i> Letter writing
+                                    <br><i class="fa fa-check text-info"></i> Proper pronunciation
+                                    <br><i class="fa fa-check text-info"></i> Total personality development
+                                    <br><i class="fa fa-check text-info"></i> Resume writing
+                                    <br><i class="fa fa-check text-info"></i> Group discussions
+                                    <br><i class="fa fa-check text-info"></i> General awareness of rules and regulations
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- CTA Section End --> 
             <!-- Counter Section Start -->
             <div id="rs-about" class="rs-about style3 pt-100 md-pt-70 d-none">
                 <div class="container">
@@ -668,5 +753,19 @@
         <script src="assets/js/contact.form.js"></script>
         <!-- main js -->
         <script src="assets/js/main.js"></script>
+
+        <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+            var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+            (function(){
+            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+            s1.async=true;
+            s1.src='https://embed.tawk.to/6489b01e94cf5d49dc5da58f/1h2stfuvd';
+            s1.charset='UTF-8';
+            s1.setAttribute('crossorigin','*');
+            s0.parentNode.insertBefore(s1,s0);
+            })();
+        </script>
+        <!--End of Tawk.to Script-->
     </body>
 </html>
