--- a/index.html
+++ b/index.html
@@ -261,7 +261,13 @@
                         <div class="content">
                             <div class="sec-title mb-40 ">
                                 <h2 class="title">OUR FEATURES</h2>
-                                <div class="desc">Extensive  coaching for all subjects. Expert Teachers. Assured Results. Batch Coaching, Private Tuitions, Home Tuitions. Spacious Class Rooms. Multiple Revisions.</div>
+                                <div class="desc">
+                                    <i class="fa fa-check text-info"></i> Extensive  coaching for all subjects.
+                                    <br><i class="fa fa-check text-info"></i> Expert Teachers. 
+                                    <br><i class="fa fa-check text-info"></i> Assured Results. 
+                                    <br><i class="fa fa-check text-info"></i> Batch Coaching, Private Tuitions, Home Tuitions. 
+                                    <br><i class="fa fa-check text-info"></i> Spacious Class Rooms. 
+                                    <br><i class="fa fa-check text-info"></i> Multiple Revisions.</div>
                             </div>
                             <div class="btn-part">
                                 <a class="readon banner-style uppercase" href="#">Read More</a>
@@ -367,5 +373,20 @@
         <script src="assets/js/contact.form.js"></script>
         <!-- main js -->
         <script src="assets/js/main.js"></script>
+
+        <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+            var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+            (function(){
+            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+            s1.async=true;
+            s1.src='https://embed.tawk.to/6489b01e94cf5d49dc5da58f/1h2stfuvd';
+            s1.charset='UTF-8';
+            s1.setAttribute('crossorigin','*');
+            s0.parentNode.insertBefore(s1,s0);
+            })();
+        </script>
+        <!--End of Tawk.to Script-->
+            
     </body>
 </html>
