--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,9 @@
         <link rel="stylesheet" type="text/css" href="assets/fonts/linea-fonts.css">
         <!-- flaticon css  -->
         <link rel="stylesheet" type="text/css" href="assets/fonts/flaticon.css">
+        
+        <!-- magnific popup css -->
+        <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
         <!-- Main Menu css -->
         <link rel="stylesheet" href="assets/css/rsmenu-main.css">
         <!-- spacing css -->
@@ -165,17 +168,72 @@
                    <div class="row margin-0">
                        <div class="col-lg-4 mb-0 padding-0 col-md-6">
                             <div class="gallery-img">
-                                <a class="image-popup" href="assets/images/gallery/1.jpg"><img src="assets/images/gallery/1.jpg" alt=""></a>
+                                <a class="image-popup" href="assets/images/gallery/4.jpeg"><img src="assets/images/gallery/4.jpeg" alt=""></a>
                             </div>
                        </div>
                        <div class="col-lg-4 mb-0 padding-0 col-md-6">
                             <div class="gallery-img">
-                                <a class="image-popup" href="assets/images/gallery/2.jpg"><img src="assets/images/gallery/2.jpg" alt=""></a>
+                                <a class="image-popup" href="assets/images/gallery/5.jpeg"><img src="assets/images/gallery/5.jpeg" alt=""></a>
                             </div>
                        </div>
                        <div class="col-lg-4 mb-0 padding-0 col-md-6">
                             <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/3.jpg"><img src="assets/images/gallery/3.jpg" alt=""></a>
+                                <a class="image-popup" href="assets/images/gallery/6.jpeg"><img src="assets/images/gallery/6.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/7.jpeg"><img src="assets/images/gallery/7.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/8.jpeg"><img src="assets/images/gallery/8.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/9.jpeg"><img src="assets/images/gallery/9.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/11.jpeg"><img src="assets/images/gallery/11.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/12.jpeg"><img src="assets/images/gallery/12.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/13.jpeg"><img src="assets/images/gallery/13.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/14.jpeg"><img src="assets/images/gallery/14.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/15.jpeg"><img src="assets/images/gallery/15.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/17.jpeg"><img src="assets/images/gallery/17.jpeg" alt=""></a>
+                            </div>
+                       </div>                       
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/10.jpeg"><img src="assets/images/gallery/10.jpeg" alt=""></a>
+                            </div>
+                       </div>
+                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
+                            <div class="gallery-img">                                
+                                <a class="image-popup" href="assets/images/gallery/16.jpeg"><img src="assets/images/gallery/16.jpeg" alt=""></a>
                             </div>
                        </div>
                    </div>
@@ -332,17 +390,33 @@
         <script src="assets/js/jquery.min.js"></script>
         <!-- Bootstrap v4.4.1 js -->
         <script src="assets/js/bootstrap.min.js"></script>
+        <!-- magnific popup -->
+        <script src="assets/js/jquery.magnific-popup.min.js"></script>
         <!-- Menu js -->
         <script src="assets/js/rsmenu-main.js"></script> 
         <!-- op nav js -->
         <script src="assets/js/jquery.nav.js"></script>
+        <!-- wow js -->
+        <script src="assets/js/wow.min.js"></script>     
         <!-- plugins js -->
         <script src="assets/js/plugins.js"></script>
-        <!-- magnific popup js -->
-        <script src="assets/js/jquery.magnific-popup.min.js"></script>  
         <!-- contact form js -->
         <script src="assets/js/contact.form.js"></script>
         <!-- main js -->
         <script src="assets/js/main.js"></script>
+
+        <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+            var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+            (function(){
+            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+            s1.async=true;
+            s1.src='https://embed.tawk.to/6489b01e94cf5d49dc5da58f/1h2stfuvd';
+            s1.charset='UTF-8';
+            s1.setAttribute('crossorigin','*');
+            s0.parentNode.insertBefore(s1,s0);
+            })();
+        </script>
+        <!--End of Tawk.to Script-->
     </body>
 </html>
